# fridademo20230301

./: README.md  settings.gradle
app/: build.gradle
app/jni/: CMakeLists.txt  native-lib.cpp
app/src/androidTest/java/com/example/fridademo20230301/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/fridademo20230301/: FridaActivity.java  FridaActivity2.java  FridaActivity3.java  FridaActivity4.java  MainActivity.java
app/src/main/java/com/example/fridademo20230301/Dynamic/: CheckInterface.java  DynamicCheck.java
app/src/main/java/com/example/fridademo20230301/a/: a.java
app/src/main/res/layout/: activity_main.xml  frida_activity.xml  frida_activity3.xml  frida_activity4.xml  second_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/fridademo20230301/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
